minipacs poc 1차 자동 완성